2009-01-01  Jim Huang  <jserv.tw@gmail.com>

	* src/mainframe.cpp (CMainFrame::CMainFrame): PCManx main window
	doesn't provide WM_CLASS property, or to be more precise, provides
	the same as the main window. Therefore, it is not possible to
	distinguish windows (important for new-kind window managers like
	ion / ion-devel / pwm / larswm).  This is a quick fix.
	Reported by Roy Zuo <roylzuo@gmail.com>.

2008-12-15  Jim Huang  <jserv.tw@gmail.com>

	* src/view/telnetcon.cpp (CTelnetCon::Close): Fix build with
	debugging.

2008-10-01  Jim Huang  <jserv.tw@gmail.com>

	* src/view/telnetview.cpp: Fix compilation errors with gcc 4.3.
	Reported by Lyman Li <lymanrb@gmail.com>.

2008-09-25  Jason Xia  <jasonxh@gmail.com>

	* src/mainframe.cpp (CMainFrame::OnFullscreenMode)
	(CMainFrame::OnSimpleMode) (CMainFrame::OnPreference): Respect user
	preference about show/hide status bar.

2008-09-13  Jim Huang  <jserv.tw@gmail.com>

	* src/notebook.cpp (CNotebook::SetPageTitle): Ignore the change of
	title if tab/CNotebook is not connected.  Avoid SegFault when closing
	a disconnected tab.
	
2008-09-02  Jason Xia  <jasonxh@gmail.com>

	* src/mainframe.cpp (CMainFrame::OnURLEntryKeyDown): Enable [KP_Enter]
	key in URL entry box.

2008-09-01  Jason Xia  <jasonxh@gmail.com>

	* src/downarticledlg.cpp (CDownArticleDlg::DownArticleFunc)
	(AppendLine): Trim trailing spaces of each line when downloading
	articles.

2008-08-12  Jim Huang  <jserv.tw@gmail.com>

	* developers/make-new-release.sh: New file.  A simple and neat script
	for developers to prepare new release more carefully.

2008-08-12  Jim Huang  <jserv.tw@gmail.com>

	* src/downarticledlg.cpp: Fix missing <string.h> inclusion with
	older system headers.

2008-08-11  Jim Huang  <jserv.tw@gmail.com>

	* po/POTFILES.in,
	po/POTFILES.skip: Translating the messages in source file
	src/docklet/eggtrayicon.c is useless.  Ignored.

	* po/zh_TW.po, po/zh_CN.po: Re-generated.

2008-08-11  Jim Huang  <jserv.tw@gmail.com>
