@@ -1,3 +1,8 @@
+2009-01-03  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
+
+	* src/core/fileutil.c,
+	src/view/telnetview.cpp: Remove some warning messages.
+
 2009-01-01  Jim Huang  <jserv.tw@gmail.com>
 
 	* src/mainframe.cpp (CMainFrame::CMainFrame): PCManx main window
